# startupmvp

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  deploy.yml
app/: Dockerfile  SHOPIFY_SCAFFOLD.md  shopify.app.toml
app/components/: SyncStatus.tsx
app/discount-optimizer/: package-lock.json  package.json  shopify.app.toml  tsconfig.json
app/lib/: db-session-storage.server.ts  db.server.ts  queue.server.ts
app/routes/: app.sync.tsx  health.tsx  webhooks.tsx
db/: schema.sql
db/migrations/: 20240101000001_extensions.sql  20240101000002_merchants.sql  20240101000003_products.sql  20240101000004_product_variants.sql  20240101000005_order_line_items.sql  20240101000006_event_log.sql  20240101000007_experiments.sql  20240101000008_experiment_assignments.sql  20240101000009_recommendations.sql  20240101000010_product_trust_scores.sql  20240101000011_bandit_parameters.sql  20240101000012_subscriptions.sql  20240101000013_merchant_notification_prefs.sql  20240101000014_products_unique_constraint.sql
discount_function/: README.md
discount_function/src/: main.rs
docs/: app-store-listing.md  merchant-onboarding.md
engine/: Dockerfile  config.py  engine_selector.py  main.py  requirements.txt
engine/api/: bandit.py  billing.py  deps.py  experiments.py  features.py  health.py  recommendations.py  router.py  (+1 more)
scripts/: seed_local.py
workers/: Dockerfile  celery_app.py  db.py  requirements.txt  shopify.py
(+64 files in other folders)
