[tool.poetry]
name = "startupmvp"
version = "0.1.0"
description = "Shopify Discount Optimization System"
authors = []
packages = [
  { include = "engine" },
  { include = "workers" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
celery = { extras = ["redis"], version = "^5.4.0" }
redis = { extras = ["hiredis"], version = "^5.0.4" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
cryptography = "^42.0.7"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
httpx = "^0.27.0"
respx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["engine/tests", "workers/tests"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
